# hyprspaces-rs

./: .SRCINFO  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  hyprspaces.install
.github/workflows/: ci.yml  codeql.yml  release.yml
scripts/: release.py  test.sh
scripts/tests/: test_release.py
src/: cli.rs  commands.rs  config.rs  daemon.rs  hyprctl.rs  lib.rs  main.rs  paired.rs  paths.rs  session.rs  setup.rs  waybar.rs
tests/: bin_help.rs  cli.rs  session.rs
