[package]
name = "hyprspaces"
version = "1.0.0"
edition = "2024"
description = "Paired dual-monitor workspace management for Hyprland"
license = "GPL-3.0-or-later"
repository = "https://github.com/jtaw5649/hyprspaces"
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.24.0"
