[package]
name = "hyprspaces"
version = "1.1.1"
edition = "2024"
description = "Paired dual-monitor workspace management for Hyprland"
license = "GPL-3.0-or-later"
repository = "https://github.com/jtaw5649/hyprspaces-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.64"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
hyprland = { version = "0.4.0-beta.3", optional = true, features = ["listener"] }

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = []
native-ipc = ["hyprland"]
